# LoadStaticSharedTargets

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetsCommon.json  CMakeUserPresets.template.json  LICENSE  README.md
.github/workflows/: build-and-test.yml  git-sync.yml
cmake/: HandlePolicies.cmake
packaging/: CMakeLists.txt  LoadStaticSharedTargetsConfig.cmake  LoadStaticSharedTargetsConfig.cmake.in
src/: CMakeLists.txt
src/cmake/: CMakeLists.txt  LoadStaticSharedTargets.cmake
tests/: CMakeLists.txt  common-failures_test-case-01.cmake  common-failures_test-case-02.cmake  include-requested-by-common-flag_test-case-01.cmake  include-requested-by-common-flag_test-case-02.cmake  include-requested-by-common-flag_test-case-03.cmake  include-requested-by-common-flag_test-case-04.cmake  include-requested-by-common-flag_test-case-05.cmake  include-requested-by-common-flag_test-case-06.cmake  include-requested-by-common-flag_test-case-07.cmake  include-requested-by-common-flag_test-case-08.cmake  include-requested-by-common-flag_test-case-09.cmake  include-requested-by-common-flag_test-case-10.cmake  include-requested-by-common-flag_test-case-11.cmake  include-requested-by-common-flag_test-case-12.cmake  include-requested-by-component_test-case-01.cmake  include-requested-by-component_test-case-02.cmake  include-requested-by-component_test-case-03.cmake  include-requested-by-component_test-case-04.cmake  include-requested-by-component_test-case-05.cmake  include-requested-by-component_test-case-06.cmake  include-requested-by-component_test-case-07.cmake  include-requested-by-component_test-case-08.cmake  include-requested-by-package-flag_test-case-01.cmake  include-requested-by-package-flag_test-case-02.cmake  include-requested-by-package-flag_test-case-03.cmake  include-requested-by-package-flag_test-case-04.cmake  include-requested-by-package-flag_test-case-05.cmake  include-requested-by-package-flag_test-case-06.cmake  include-requested-by-package-flag_test-case-07.cmake  include-requested-by-package-flag_test-case-08.cmake
tests/helpers/: assertions.cmake  test_case_wrapper.cmake  testee_macro_wrapper.cmake
tests/mocks/: failure-target1.cmake  failure-target2.cmake  success-target1.cmake  success-target2.cmake
